--- a/style.css
+++ b/style.css
@@ -423,6 +423,7 @@ span {
     transform: translateX(100%);
     transition: all 0.5s linear;
     visibility: hidden;
+    overflow-x: hidden;
   }
 
   .active{
